2026.01.21 sy.oh 어빌리티 매니저 주석 및 문구 수정 에레나메니져 땅 만들기 + 청소 기능 보강. 클리어메니져 생성 및 청소 기능 구현. 콘피그 메니져 기본 값 수정.
게임매니져 작업 진행 중

미스터 제미나이 md 살짝 수정.
마오캐플러그인에 클리어매니져 추가.
유우키 능력자 람머스 처럼 소스 정리 및 쿨타임 추가. 능력 보강 예정.